HPC-9264: Prevent line breaks in first level section menu items

--- a/html/themes/custom/common_design_subtheme/sass/ghi/components/_entity-navigation.scss
+++ b/html/themes/custom/common_design_subtheme/sass/ghi/components/_entity-navigation.scss
@@ -12,6 +12,7 @@ ul.links--entity-navigation {
       display: flex;
       align-items: center;
       height: 3.5rem;
+      white-space: nowrap;
     }
 
     &.active > .link-wrapper::before,
